<resources>
    <string name="app_name">sudokuapp</string>

    <string name="One">un    </string>
    <string name="Two">deux  </string>
    <string name="Three">trois </string>
    <string name="Four">quatre</string>
    <string name="Five">cinq  </string>
    <string name="Six">six   </string>
    <string name="Seven">sept  </string>
    <string name="Eight">huit  </string>
    <string name="Nine">neuf  </string>
    <string name="Settings">Settings </string>
    <string name="name">Sudoku Vocabulary</string>
    <string name="resume"> Resume</string>
    <string name="quitgame">Quit Game</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="timer">Timer</string>
    <string name="howtoplay">How to Play?</string>
    <string name="modes">Modes</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="levels">Difficulty Levels</string>
    <string name="easy">Easy</string>
    <string name="intermediate">Intermediate</string>
    <string name="hard">Hard</string>
    <string name="On">On</string>
    <string name="instructions">1.) Create a Sudoku grid with blank spaces by choosing the grid size, difficulty and language you want to practice. \n \n 2.) Choose grid cell where you want to write the word and press the button with word. \n \n 3.) Fill in all the blank spaces with words using the buttons .\n \n 4.) Complete the Sudoku grid and check your answers using check button.\n \n 5.) Repeat steps 2-4 to complete the game.\n \n 6.) You can use Listening mode to practice understanding of spoken words of the language.\n \n 7.)In Listening mode select the pre filled cell with number and click on Listen button to listen to the word. \n \n Have fun and challenge yourself with new words! </string>


</resources>