<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="View.setting_page">

    <TextView
        android:layout_width="181dp"
        android:layout_height="71dp"
        android:layout_marginBottom="701dp"
        android:fontFamily="sans-serif"
        android:text="@string/Settings"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textStyle="bold"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="@+id/SettingsLinear"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/SettingsLinear"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.193">

        <!--- commented out for use in iteration 3
         <TextView
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:text="@string/howtoplay"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColor="@color/purple_700"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"

           >
           -->

        <!-- to be implemented in iteration 3 -->
       <!--  <TextView
            android:id="@+id/timerView"
            android:layout_width="155dp"
            android:layout_height="43dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/timer"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" /> -->
        <Switch
            android:id="@+id/timer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Timer"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:checked="true"
            />


        <!-- <RadioGroup
            android:id="@+id/timerRadio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/On"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <RadioButton
                android:id="@+id/off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/off"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </RadioGroup> -->

        <!-- to be implemented in iteration 3 -->
        <TextView
            android:id="@+id/levels"
            android:layout_width="388dp"
            android:layout_height="52dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/levels"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="10dp">

            <RadioButton
                android:id="@+id/easy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/easy"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <RadioButton
                android:id="@+id/intermediate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/intermediate"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />

            <RadioButton
                android:id="@+id/hard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hard"
                android:textAppearance="@style/TextAppearance.AppCompat.Display1" />
        </RadioGroup>


    </LinearLayout>

    <Button
        android:id="@+id/button14"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginTop="44dp"
        android:layout_marginBottom="12dp"
        android:onClick="backToMain"
        android:text="Back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.892"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsLinear"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/save"
        android:layout_width="132dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:text="Save Changes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button14"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SettingsLinear"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
